@@ -78,12 +78,21 @@ has 'api_version' => (
 
 with 'Net::Checkpoint::Management::v1::Role::REST::Client';
 
+sub _error_handler ($self, $data) {
+    my $error_message = (exists $data->{errors} && exists $data->{errors}->[0]
+        && exists $data->{errors}->[0]->{message})
+        ? $data->{errors}->[0]->{message}
+        : $data->{message};
+    croak($error_message);
+}
+
 sub _create ($self, $url, $object_data, $query_params = {}) {
     my $params = $self->user_agent->www_form_urlencode( $query_params );
     my $res = $self->post("$url?$params", $object_data);
     my $code = $res->code;
     my $data = $res->data;
-    croak($data->{errors}->[0]->{message})
+
+    $self->_error_handler($data)
         unless $code == 200;
     return $data;
 }
@@ -105,7 +114,7 @@ sub _list ($self, $url, $list_key, $query_params = {}) {
         });
         my $code = $res->code;
         my $data = $res->data;
-        croak($data->{errors}->[0]->{message})
+        $self->_error_handler($data)
             unless $code == 200;
 
         # use first response for base structure of response
@@ -138,7 +147,7 @@ sub _get ($self, $url, $query_params = {}) {
     my $code = $res->code;
     my $data = $res->data;
 
-    croak($data->{errors}->[0]->{message})
+    $self->_error_handler($data)
         unless $code == 200;
 
     return $data;
@@ -151,7 +160,7 @@ sub _update ($self, $url, $object, $object_data) {
     my $res = $self->post($url, $updated_data);
     my $code = $res->code;
     my $data = $res->data;
-    croak($data->{errors}->[0]->{message})
+    $self->_error_handler($data)
         unless $code == 200;
 
     return $data;
@@ -161,7 +170,7 @@ sub _delete ($self, $url, $object) {
     my $res = $self->post($url, $object);
     my $code = $res->code;
     my $data = $res->data;
-    croak($data->{errors}->[0]->{message})
+    $self->_error_handler($data)
         unless $code == 200;
 
     return 1;
@@ -278,7 +287,7 @@ sub login($self) {
             $res->data->{sid});
     }
     else {
-        croak($res->data->{message});
+        $self->_error_handler($res->data);
     }
 }
 
@@ -292,7 +301,7 @@ sub logout($self) {
     my $res = $self->post('/web_api/v1/logout', {});
     my $code = $res->code;
     my $data = $res->data;
-    croak($data->{message})
+    $self->_error_handler($data)
         unless $code == 200;
 }
 
@@ -307,7 +316,7 @@ sub publish($self) {
     my $res = $self->post('/web_api/v' . $self->api_version . '/publish', {});
     my $code = $res->code;
     my $data = $res->data;
-    croak($data->{message})
+    $self->_error_handler($data)
         unless $code == 200;
 
     return $data->{'task-id'};
@@ -325,7 +334,7 @@ sub discard($self) {
     my $res = $self->post('/web_api/v' . $self->api_version . '/discard', {});
     my $code = $res->code;
     my $data = $res->data;
-    croak($data->{message})
+    $self->_error_handler($data)
         unless $code == 200;
 
     return $data;
